--- a/source/sass/pages/index/hero.scss
+++ b/source/sass/pages/index/hero.scss
@@ -8,6 +8,9 @@
         height: calc(100vh - 65px);
         min-height: 500px;
     }
+    @include mobile {
+        min-height: 800px;
+    }
     &__slide {
         height: 100%;
         display: flex;
@@ -25,6 +28,7 @@
         }
     }
     &__title {
+        @include h1-style;
         margin-bottom: 40px;
         position: relative;
     }
