--- a/source/sass/pages/serv/serv.scss
+++ b/source/sass/pages/serv/serv.scss
@@ -1,70 +1,79 @@
- table {
-     width: 100%;
-     border-collapse: collapse;
-     margin-bottom: 50px;
-     @include tablets {
-         margin-bottom: 25px;
-     }
-     & tr:first-child td {
-         background: #E0E7F2;
-         /* identical to box height, or 100% */
-         color: #133E65;
-         @include mobile {}
-     }
-     & td {
-         padding: 25px 75px;
-         border: 2px solid #E0E7F2;
-         font-size: 18px;
-         line-height: 21px;
-         width: 33%;
-         @include tablets {
-             padding: 15px 25px;
-             font-size: 16px;
-             line-height: 18px;
-         }
-         @include mobile {
-             padding: 15px 5px;
-             font-size: 10px;
-             line-height: 10px;
-         }
-     }
-     & td:last-child {
-         @include mobile {
-             font-size: 9px;
-         }
-     }
-     & tr:last-child td {
-         border-bottom: none;
-     }
-     td:first-child {
-         border-left: none;
-     }
-     td:last-child {
-         border-right: none;
-         @include mobile {
-             max-width: 50px;
-         }
-     }
-     td:nth-child(2) {
-         text-align: center;
-     }
-     td:nth-child(3) {
-         text-align: center;
-     }
-     tr:not(:first-child) td:nth-child(2) {
-         //  font-weight: 600;
-         //  /* identical to box height, or 89% */
-         //  color: #D22828;
-     }
-     td span {
-         display: block;
-         text-align: center;
-         color: #444444;
-         font-weight: 300;
-         margin-top: 5px;
-         @include mobile {
-             font-size: 9px;
-             line-height: 12px;
-         }
-     }
- }
+.cost {
+    max-width: 100%;
+    overflow: auto;
+}
+
+.cost>div {
+    width: 100%;
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-bottom: 50px;
+    @include tablets {
+        margin-bottom: 25px;
+    }
+    & tr:first-child td {
+        background: #E0E7F2;
+        /* identical to box height, or 100% */
+        color: #133E65;
+        @include mobile {}
+    }
+    & td {
+        padding: 25px 75px;
+        border: 2px solid #E0E7F2;
+        font-size: 18px;
+        line-height: 21px;
+        width: 33%;
+        @include tablets {
+            padding: 15px 25px;
+            font-size: 16px;
+            line-height: 18px;
+        }
+        @include mobile {
+            padding: 15px 5px;
+            font-size: 10px;
+            line-height: 10px;
+        }
+    }
+    & td:last-child {
+        @include mobile {
+            font-size: 9px;
+        }
+    }
+    & tr:last-child td {
+        border-bottom: none;
+    }
+    td:first-child {
+        border-left: none;
+    }
+    td:last-child {
+        border-right: none;
+        @include mobile {
+            max-width: 50px;
+        }
+    }
+    td:nth-child(2) {
+        text-align: center;
+    }
+    td:nth-child(3) {
+        text-align: center;
+    }
+    tr:not(:first-child) td:nth-child(2) {
+        //  font-weight: 600;
+        //  /* identical to box height, or 89% */
+        //  color: #D22828;
+    }
+    td span {
+        display: block;
+        text-align: center;
+        color: #444444;
+        font-weight: 300;
+        margin-top: 5px;
+        @include mobile {
+            font-size: 9px;
+            line-height: 12px;
+        }
+    }
+}
