fix client bugs

--- a/source/sass/common/header.scss
+++ b/source/sass/common/header.scss
@@ -230,7 +230,7 @@
                                 position: absolute;
                                 top: 100%;
                                 width: 100%;
-                                right: 0;
+                                left: 0;
                                 background: #F4F2F4;
                                 transition: $transition-speed;
                                 pointer-events: none;
