--- a/source/sass/common/timetable.scss
+++ b/source/sass/common/timetable.scss
@@ -45,6 +45,7 @@
         width: 70px;
         height: 23px;
         margin-right: 15px;
+        flex-shrink: 0;
     }
     // &__item--green {
     //     & .timetable__color {
